command done except status